--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+uboot-n516 (2009.03-2) asimov; urgency=low
+
+  * Cosmetic fixes.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Wed, 07 Oct 2009 19:49:45 +0700
+
 uboot-n516 (2009.03-1) asimov; urgency=low
 
   * Initial release for OpenInkpot
