--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+uboot-n516 (2009.03-3) zelazny; urgency=low
+
+  * Do not show .oifw.zip files in update menu (OI#326)
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sat, 16 Jan 2010 13:41:15 +0600
+
 uboot-n516 (2009.03-2) asimov; urgency=low
 
   * Cosmetic fixes.
